@@ -40,6 +40,7 @@ Verilator 4.228 2022-10-01
 * Add --build-jobs, and rework arguments for -j (#3623). [Kamil Rakoczy]
 * Rename --bin to --build-dep-bin.
 * Rename debug flags --dumpi-tree, --dumpi-graph, etc. [Geza Lore]
+* Add error on real edge event control.
 * Fix thread saftey in SystemC VL_ASSIGN_SBW/WSB (#3494) (#3513). [Mladen Slijepcevic]
 * Fix crash in gate optimization of circular logic (#3543). [Bill Flynn]
 * Fix arguments in non-static method call (#3547) (#3582). [Gustav Svensk]
